--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -65,3 +65,13 @@ body {
     cursor: pointer;
   }
 }
+
+
+/* User profile page */
+.users-show-page {
+  .user-info {
+    .thumbnail {
+      margin-bottom: 0px;
+    }
+  }
+}
