--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8419,6 +8419,7 @@ body {
 
 /* Topic Index Page */
 
+.categories-show-page .topic-list .nav > li > a,
 .topics-index-page .topic-list .nav > li > a {
   position: relative;
   display: block;
@@ -8426,23 +8427,28 @@ body {
   font-size: 1.2em;
 }
 
+.categories-show-page .topic-list a,
 .topics-index-page .topic-list a {
   color: #444444;
 }
 
+.categories-show-page .topic-list .meta,
 .topics-index-page .topic-list .meta {
   font-size: 0.9em;
   color: #b3b3b3;
 }
 
+.categories-show-page .topic-list .meta a,
 .topics-index-page .topic-list .meta a {
   color: #b3b3b3;
 }
 
+.categories-show-page .topic-list .badge,
 .topics-index-page .topic-list .badge {
   background-color: #d8d8d8;
 }
 
+.categories-show-page .topic-list hr,
 .topics-index-page .topic-list hr {
   margin-top: 12px;
   margin-bottom: 12px;
