--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8358,14 +8358,17 @@ body {
 
 /* header */
 
-.navbar-static-top {
-  border-color: #e7e7e7;
-  background-color: #fff;
-  -webkit-box-shadow: 0px 1px 11px 2px rgba(42, 42, 42, 0.1);
-          box-shadow: 0px 1px 11px 2px rgba(42, 42, 42, 0.1);
-  border-top: 4px solid #00b5ad;
-  margin-bottom: 40px;
-  margin-top: 0px;
+.navbar-static-top .dropdown-menu {
+  padding: 0px;
+}
+
+.navbar-static-top .dropdown-menu li a {
+  border-bottom: 1px solid #d8d8d8;
+  line-height: 2.4;
+}
+
+.navbar-static-top .dropdown-menu li a .glyphicon {
+  margin-right: 8px;
 }
 
 /* Sticky footer styles */
@@ -8415,6 +8418,28 @@ body {
 
 .users-show-page .user-info .thumbnail {
   margin-bottom: 0px;
+}
+
+.users-show-page .nav-tabs {
+  margin-bottom: 20px;
+}
+
+.users-show-page .nav-tabs > li.active > a {
+  background-color: #fff;
+}
+
+.users-show-page .list-group .list-group-item {
+  border: none;
+  margin-bottom: 0px;
+  border-bottom: 1px solid #efefef;
+}
+
+.users-show-page .list-group .list-group-item .meta {
+  color: #b3b3b3;
+}
+
+.users-show-page .pagination {
+  margin: 12px 0;
 }
 
 /* Topic Index Page */
