Setup sdfault home page

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -111,7 +111,7 @@ body {
 
 
 /* Topic Index Page */
-.categories-show-page, .topics-index-page {
+.categories-show-page, .topics-index-page, .root-page {
   .topic-list {
     .nav > li > a {
       position: relative;
